projects/project-edu/edu-user/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edu-user-service
  namespace: edu-user
spec:
  selector:
    app: edu-user
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
