projects/project-edu/edu-user/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edu-user-ingress
  namespace: edu-user
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: edu-user.211.254.214.68.sslip.io
      http:
        paths:
          - path: /{userNo}
            pathType: Prefix
            backend:
              service:
                name: edu-user-service
                port:
                  number: 80
